assets/less/app.less
/* ... */
.nav-doc>li.active {background:#27ae60}
.nav-doc>li.active a {color:#fff;font-weight:400;}
@media (min-width:992px) {.doc-sidebar .affix {position:fixed;top:20px}
}

.affix-top,.affix{
 position: static;
}

.group {
    background: yellow;
    width: 200px;
    height: 500px;
}
.group .subgroup {
    background: orange;
    width: 150px;
    height: 200px;
}

.sdss-docs-sidebar.affix {position:static } 
.sdss-docs-sidenav {margin-top:20px; margin-bottom:20px } 
.sdss-docs-sidebar .nav>li>a {display:block; font-size:1em; font-weight:500; color:#999; padding:4px 20px } 

.sdss-docs-sidebar .nav .heading>a { pointer-events: none; cursor: default; color: #888; font-weight:700;} 

.sdss-docs-sidebar .nav>li>a:hover,.sdss-docs-sidebar .nav>li>a:focus {padding-left:19px; color:@brand-sdss; text-decoration:none; background-color:transparent; border-left:1px solid @brand-sdss; } 
.sdss-docs-sidebar .nav>.active>a,.sdss-docs-sidebar .nav>.active:hover>a,.sdss-docs-sidebar .nav>.active:focus>a {padding-left:18px; font-weight:700; color:@brand-sdss; background-color:transparent; border-left:2px solid @brand-sdss }
.sdss-docs-sidebar .nav .nav {display:none; padding-bottom:10px } 
.sdss-docs-sidebar .nav .nav>li>a {padding-top:1px; padding-bottom:1px; padding-left:30px; font-size:.9em; font-weight:400 } 
.sdss-docs-sidebar .nav .nav>li>a:hover,.sdss-docs-sidebar .nav .nav>li>a:focus {padding-left:29px } 
.sdss-docs-sidebar .nav .nav>.active>a,.sdss-docs-sidebar .nav .nav>.active:hover>a,.sdss-docs-sidebar .nav .nav>.active:focus>a {font-weight:500; padding-left:28px }
.nav>li.indent {padding-left: 0px; margin-left:20px;} 

.back-to-top {margin-top:10px; margin-bottom: 10px; font-size:.9em; font-weight:400; color: @brand-sdss-text; font-variant: small-caps;
&:hover {color: @brand-sdss; text-decoration:none;}
} 


/* ==========================================================================
   Posts
   ========================================================================== */

.hentry header { }
.hentry time { }
.hentry .byline { }
.hentry .entry-content { }
.hentry footer { }
.display-posts-title {font-size: 15px;font-weight: bold;}
.listing-item {margin-bottom: 10px;}

.press
{
    margin-bottom: .75em;
    background-color: #FFF;
    overflow: hidden;
      & .content {padding:15px}
      & .entry-title {text-align:center;}
      & .entry-summary {padding-left: .5em;}
      & .author {padding-left: .5em;}
      & .press-img-content {height: 196px;position: relative; overflow: hidden;}
      & .press-img-content img {position: absolute; }
      & .press-title {display: table-cell; vertical-align: bottom; z-index: 2; position: relative; } 
}
.thumbnail .caption {
  background-color: @gray-lighter;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: .75em;
}

.post-block {
width: 50%;
float: left;
margin-top: 1em;}


/* ==========================================================================
   Footer
   ========================================================================== */

.content-info { }
.sitemap { background: #232323; padding: 30px 0 0 0; font-size: 12px; color: #999;
      & a { color: #ccc; }
      & a:hover {color: #fff; }
      &  widget { margin-bottom:30px; }
      & .widget-title { font-size: 17px; font-weight: bold; color: #ccc; margin: 0 0 20px; }
      & .entry-meta { border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; margin: 0 0 35px 0; padding: 2px 0; color: #888888; font-size: 12px; font-size: 0.75rem; }
      & .entry-meta a { color: #333333; }
      & .entry-meta .meta-in { border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; padding: 10px 0; }
}

.follow-me-icons { font-size:30px; 
      & i { float:left; margin:0 10px 0 0; }   
}    

#footer {background: #191919; padding-top: 15px; color: #777; font-size: 12px; min-height: 35px;}
.social a { color: #aaa; }
.social a:hover { color: #fff; }
.social p { margin: 0; }


/* ==========================================================================
   WordPress Generated Classes
   See: http://codex.wordpress.org/CSS#WordPress_Generated_Classes
   ========================================================================== */

.aligncenter { display: block; margin: 0 auto; }
.alignleft { float: left; }
.alignright { float: right; }
figure.alignnone { margin-left: 0; margin-right: 0; }

/* ==========================================================================
   Figures and Stories
   ========================================================================== */
.sdss-wrapper {
}

.sdss-story {
	margin-left: 5px; 
	margin-right: 5px; 
	& .panel-heading { background-color: inherit;}
}

.sdss-story-right {
	float: right; 
}

.sdss-story-left {
	float: left; 
}

.sdss-fig-right {
	float: right; 
}

.sdss-fig-left {
	float: left; 
}

/* ==========================================================================
   Table of Contents Shortcode/Plugin
   ========================================================================== */
/*
 * jquery.tocify.css 1.9.0
 * Author: @gregfranko
 */

/* The Table of Contents Wrapper */
#toc-wrapper {
    min-width: 200px;
	background: rgba(0,0,0,0.1);
	margin: 0px 5px 5px 0px;
	float: left; 
}
/* The Table of Contents container element */
.tocify {
    //width: 20%;
    width: 96%;
    max-height: 100%;
    overflow: auto;
    margin-left: 2%;
}
/* ... */

